# thomas-coin

./: .gitignore  LICENSE.md  README.md  lines.py  pyproject.toml  requirements.txt
src/: api.py  cli.py  config.py  constants.py  test.py
src/blockchain/: __init__.py  block.py  blockchain.py  contract.py  db_handling.py  state.py  storage.py  transaction.py
src/consensus/: __init__.py  lottery.py  signed_stake.py  stake.py  sum_tree.py  tree.py  validator.py
src/database/: initial_nodes.json  unl.json  utils.py
src/node/: README.md  __init__.py  node.py  node_connection.py  node_utils.py
src/transaction/: __init__.py  transaction.py
src/wallet/: __init__.py  other_wallet.py  wallet.py
tcoin/: config.py  constants.py
tcoin/cli/: main.py
tcoin/p2p/nodes/: __init__.py  node.py  node_connection.py  scheduler.py  threaded.py
tcoin/p2p/requests/: __init__.py  discover_peers.py  get_msgs.py  request.py
tcoin/tangle/: __init__.py  signed.py  tangle.py
tcoin/tangle/messages/: __init__.py  message.py  payload.py  transaction.py
tcoin/utils/: __init__.py  misc.py  pow.py  storage.py
tcoin/wallet/: wallet.py
